--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -58,6 +58,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/icon_fab_add"
+        app:backgroundTint="@color/color_primary"
         app:elevation="20dp"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
