--- a/app/src/main/res/layout/adapter_home_projetos.xml
+++ b/app/src/main/res/layout/adapter_home_projetos.xml
@@ -9,68 +9,45 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="20dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageProjeto"
-            android:layout_width="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_width="174dp"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/textNameProjeto"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
-            android:text="Nome do projeto"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageProjeto"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Nome do projeto" />
 
         <TextView
             android:id="@+id/textDateProjeto"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
-            android:text="Inicio do Projeto: xx/xx/xxxx"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imageProjeto"
-            app:layout_constraintTop_toBottomOf="@+id/textTipoEnsaio"
-            app:layout_constraintVertical_bias="1.0" />
+            android:text="Inicio do Projeto: xx/xx/xxxx" />
 
         <TextView
             android:id="@+id/textTipoEnsaio"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="2dp"
             android:text="Tipo de Ensaio"
-            android:textColor="#FF0909"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imageProjeto"
-            app:layout_constraintTop_toBottomOf="@+id/textDescricaoProjeto"
-            app:layout_constraintVertical_bias="0.0" />
+            android:textColor="#FF0909" />
 
         <TextView
             android:id="@+id/textDescricaoProjeto"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="4dp"
-            android:text="Descrição do projeto localização"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/imageProjeto"
-            app:layout_constraintTop_toBottomOf="@+id/textNameProjeto"
-            app:layout_constraintVertical_bias="0.122" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="Descrição do projeto localização" />
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
