--- a/app/src/main/res/layout/adapter_home_projeto_categoria.xml
+++ b/app/src/main/res/layout/adapter_home_projeto_categoria.xml
@@ -13,21 +13,17 @@
 
         <ImageView
             android:id="@+id/imageProjeto"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:background="#00FFFFFF" />
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+
+            tools:srcCompat="@drawable/ic_logospt_azul" />
 
         <Button
-            android:id="@+id/buttoProjetoName"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="#FFFFFF"
-            android:elevation="40dp"
-            android:padding="0dp"
-            android:text="SPT"
-            android:textColor="@color/fundo" />
-
+            android:id="@+id/buttonProjetoName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageProjeto"
+            android:layout_centerHorizontal="true"
+            android:text="SPT" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
