reogarnizado tema do aplicativo para material componentes

--- a/app/src/main/res/layout/adpter_carimbo_projeto.xml
+++ b/app/src/main/res/layout/adpter_carimbo_projeto.xml
@@ -6,13 +6,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/TextImputLayoutNameProjeto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/TextImputEditTextNameProjeto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="hint" />
