--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,38 +1,30 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MontaigneApp" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.MontaigneApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="android:colorPrimary">@color/destaque</item>
-        <item name="colorPrimaryVariant">@color/fundo</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:colorPrimary">@color/color_primary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorSecondary">@color/destaque</item>
+
+
 
 
         <!-- Estilos padrão. -->
-        <item name="android:textColor">@color/white</item>
         <item name="colorAccent">@color/accent</item>
-
-        <!--  fundo-->
         <item name="backgroundColor">#000000</item>
-
-        <item name="android:buttonStyle">@style/ButtonPadrao_Dark</item>
+        <item name="materialButtonStyle">@style/ButtonPadrao_Dark</item>
         <item name="imageButtonStyle">@style/ImageButton_Dark</item>
         <item name="editTextStyle">@style/Edit_Text_dark</item>
         <item name="android:textViewStyle">@style/TextView_Dark</item>
-
-
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/destaque</item>
-
-        <!--Button flutuante-->
-
-
-
-
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
-        <!-- Customize your theme here. -->
+
+
+
+
+
+
+
     </style>
-
-
     <style name="Theme.MontaigneApp.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
