--- a/app/src/main/res/values/style_Light.xml
+++ b/app/src/main/res/values/style_Light.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!--- Button padrão do app. -->
-    <style name="ButtonPadrao_light" parent="Widget.AppCompat.Button">
+    <style name="ButtonPadrao_light" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14dp</item>
         <item name="backgroundTint">@color/color_primary</item>
