--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,7 @@
 
         <!-- Estilos padrão. -->
         <item name="android:textColor">@color/black</item>
+        <item name="textInputStyle">@style/ImputLight</item>
         <item name="colorAccent">@color/accent</item>
         <item name="colorSurface">@color/fundo</item>
         <item name="colorError">#B00020</item>
