--- a/app/src/main/res/drawable/ic_furo.xml
+++ b/app/src/main/res/drawable/ic_furo.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M20.24,6 L11,1.38V14c-3.62,0.21 -7,1.56 -7,4 0,2.63 4,4 8,4s8,-1.37 8,-4c0,-2.41 -3.38,-3.76 -7,-4V9.62ZM18,18c0,0.71 -2.28,2 -6,2s-6,-1.29 -6,-2 1.88,-1.75 5,-2v2h2V16C16.12,16.25 18,17.36 18,18ZM13,4.62 L15.76,6 13,7.38Z"/>
+<vector android:height="32dp" android:viewportHeight="24"
+    android:viewportWidth="24" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M13,11.9L13,19L11,19L11,11.9C8.718,11.437 7,9.419 7,7C7,4.239 9.239,2 12,2C14.761,2 17,4.239 17,7C17,9.419 15.282,11.437 13,11.9ZM9,14.157L9,16.184C6.067,16.55 4,17.387 4,18C4,18.807 7.579,20 12,20C16.421,20 20,18.807 20,18C20,17.387 17.933,16.55 15,16.184L15,14.157C19.056,14.602 22,15.968 22,18C22,20.507 17.52,22 12,22C6.48,22 2,20.507 2,18C2,15.968 4.944,14.602 9,14.157ZM12,10C13.657,10 15,8.657 15,7C15,5.343 13.657,4 12,4C10.343,4 9,5.343 9,7C9,8.657 10.343,10 12,10Z"/>
 </vector>
